# nbmirror

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  README.md  index.html  pyproject.toml
src/nbmirror/: __init__.py  builder.py  cli.py  git_hook.py  hook_install.py  paths.py
src/nbmirror/templates/: __init__.py  injected.css  injected.js
tests/: test_builder.py  test_cli_and_hooks.py  test_paths.py
tests/fixtures/: integration_fixture.ipynb
