[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbmirror"
version = "0.1.0"
description = "Convert your .ipynb notebooks to .html with hideable code cells"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "nbmirror contributors" }]
dependencies = [
  "nbformat>=5.8",
  "nbconvert>=7.10",
]

[project.scripts]
nbmirror = "nbmirror.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nbmirror = ["templates/*.css", "templates/*.js"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
